# NetVault

./: .gitignore  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml  test.py
.github/workflows/: deploy.yml  lint.yml
alembic/: env.py
alembic/versions/: 2026_03_08_1951-4f9e2a95d3f0_init.py  2026_03_10_1224-95be5ffd94ba_add_path_to_files.py  2026_03_10_2043-8ff15344eecb_add_folder_id_to_public_links.py  2026_03_10_2050-73dd4fe22fce_make_file_id_and_folder_id_optional.py  2026_03_10_2200-e3cac20653b2_make_folder_id_optional_in_minio_.py  2026_03_28_2031-aa79ea6388f8_fix_folder_id_nullable.py
src/: __main__.py  app_factory.py  main.py
src/client/: __init__.py  cli.py  client.py  protocol.py
src/core/: config.py  logger.py
src/database/: connection.py
src/database/models/: __init__.py  base.py  bucket.py  bucket_permission.py  event_log.py  file.py  forlder.py  minio_session.py  public_link.py  user.py
src/database/repository/: __init__.py
src/database/repository/base/: __init__.py  models.py  repository.py
src/database/repository/postgres/: __init__.py  errors.py
src/database/repository/postgres/base/: __init__.py  postgres_repository.py
src/database/repository/postgres/bucket/: __init__.py  repository.py
src/database/repository/postgres/bucket/base/: repository.py
src/database/repository/postgres/bucket/dtos/: __init__.py  dtos.py
src/database/repository/postgres/bucket_permission/: __init__.py  repository.py
src/database/repository/postgres/bucket_permission/base/: repository.py
src/database/repository/postgres/bucket_permission/dtos/: __init__.py  dtos.py
src/database/repository/postgres/file/: repository.py
src/database/repository/postgres/file/base/: repository.py
src/database/repository/postgres/file/dtos/: __init__.py  dtos.py
src/database/repository/postgres/folder/: repository.py
src/database/repository/postgres/folder/base/: repository.py
src/database/repository/postgres/folder/dtos/: __init__.py  dtos.py
src/database/repository/postgres/minio_session/: repository.py
src/database/repository/postgres/minio_session/base/: repository.py
src/database/repository/postgres/minio_session/dtos/: __init__.py  dtos.py
src/database/repository/postgres/public_link/: repository.py
src/database/repository/postgres/public_link/base/: repository.py
src/database/repository/postgres/public_link/dtos/: __init__.py  dtos.py
src/database/repository/postgres/user/: __init__.py  repository.py
src/database/repository/postgres/user/base/: __init__.py  repository.py
src/database/repository/postgres/user/dtos/: __init__.py  dtos.py
src/exceptions/: __init__.py
src/handlers/: __init__.py
src/handlers/api/: __init__.py
src/handlers/api/v1/: __init__.py
src/handlers/api/v1/auth/: __init__.py
src/handlers/api/v1/auth/login/: models.py  router.py
src/handlers/api/v1/auth/refresh/: models.py  router.py
src/handlers/api/v1/auth/register/: models.py  router.py
src/handlers/api/v1/auth/reset_password/: models.py  router.py
src/handlers/api/v1/auth/two_fa_auth/: models.py  router.py
src/handlers/api/v1/buckets/: __init__.py  models.py  router.py
src/handlers/api/v1/files/: __init__.py  models.py  router.py
src/handlers/api/v1/folders/: __init__.py  models.py  router.py
src/handlers/api/v1/health/: __init__.py  router.py
src/handlers/api/v1/public_links/: __init__.py  models.py  router.py
src/handlers/api/v1/search/: __init__.py  models.py  router.py
src/handlers/api/v1/upload_sessions/: __init__.py  models.py  router.py
src/handlers/api/v1/users/: __init__.py
src/handlers/api/v1/users/profile/: models.py  router.py
src/handlers/dependencies/: auth.py
src/handlers/public/: __init__.py
src/handlers/public/download/: __init__.py  router.py
src/integrations/minio/: client.py
src/integrations/redis/: __init__.py  client.py  connection.py
src/middlewares/: __init__.py  logging_middleware.py
src/server/: __init__.py  auth.py  protocol.py  server.py  storage.py
src/services/access/: service.py
src/services/auth/: models.py  permissions.py  service.py
src/services/buckets/: models.py  service.py
src/services/files/: service.py
src/services/folders/: service.py
src/services/public_link/: service.py
src/services/search/: service.py
src/services/security/: __init__.py  service.py
src/services/ses/: __init__.py  templates.py  yandex.py
src/services/upload_sessions/: service.py
src/templates/: download_page.html
src/utils/: config.py  constants.py  exceptions.py  logger.py  security.py  types.py
